# domi

./: Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: bench.yml  test.yml  test_miri.yml
benches/: pipeline.rs
data/: alphabet  fitbit  google
examples/: dump.rs  geosite.rs  iter_all.rs  rule_set.rs  srs.rs
proto/: geosite.proto
src/: geosite.rs  interner.rs  lib.rs  sort_predictable.rs  srs.rs
