[package]
name = "domi"
version = "0.1.0-alpha.9"
edition = "2024"
authors = ["チセ <123655015+chise0713@users.noreply.github.com>"]
repository = "https://github.com/chise0713/domi"
readme = true
license = "MIT OR Apache-2.0"
description = "domi provides abstractions and utilities for domain-list-community data source."
categories = ["parser-implementations", "parsing"]
keywords = ["parser", "domain", "v2ray", "sing-box"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = ["serde"]
serde = ["serde/alloc", "serde/derive", "serde/rc", "serde_with/macros"]
protobuf = ["dep:prost", "dep:prost-build"]

[[example]]
doc-scrape-examples = true
name = "srs"
required-features = ["serde"]

[[example]]
name = "geosite"
required-features = ["protobuf"]

[dependencies]
rustc-hash = "^2.1"

serde_with = { version = "^3", default-features = false, features = [
    "macros",
], optional = true }
serde = { version = "^1", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }

prost = { version = "^0.14", optional = true }

[build-dependencies]
prost-build = { version = "^0.14", optional = true }

[dev-dependencies]
serde_json = "^1.0"
prost = "^0.14"
